fix: Photos spacing

--- a/src/app/audit/photos/photos.component.scss
+++ b/src/app/audit/photos/photos.component.scss
@@ -1,3 +1,8 @@
+.row {
+  margin-right: 0;
+  margin-left: 0;
+}
+
 .image-box {
   position: relative;
   overflow: hidden;
